[gd_scene load_steps=5 format=3 uid="uid://dg4i3rdnv142i"]

[ext_resource type="Script" uid="uid://b81ic3vb0mu2s" path="res://src/ui/gum_health_display.gd" id="1_bipt8"]
[ext_resource type="Texture2D" uid="uid://c1r23cn32j1um" path="res://assets/sprites/hud_gum_border.png" id="2_316a0"]
[ext_resource type="Texture2D" uid="uid://crscd01odl8uv" path="res://assets/sprites/hud_gum_1.png" id="2_ssflk"]
[ext_resource type="Texture2D" uid="uid://bvtdw7gwu14xu" path="res://assets/sprites/hud_gum_2.png" id="3_fjumy"]

[node name="GumHealthDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 24.0
offset_bottom = 24.0
script = ExtResource("1_bipt8")
inner_scale = 4.0
floaty_gum_texture = ExtResource("2_ssflk")
bouncy_gum_texture = ExtResource("3_fjumy")

[node name="InnerWrapper" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(4, 4)

[node name="HealthContainer" type="Control" parent="InnerWrapper"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="ActiveBorder" type="TextureRect" parent="InnerWrapper"]
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("2_316a0")
